[metadata]
name = voice-ai
version = attr: neuralspace.version.version
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.7
install_requires =
  requests
  websocket_client
