[metadata]
name = neuralspace
version = attr: neuralspace.version.version
long_description = file: README.md
long_description_content_type = text/markdown
url = https://voice.neuralspace.ai
project_urls =
  Docs = https://voice.neuralspace.ai/docs
  Source = https://github.com/Neural-Space/neuralspace-python
classifiers =
  Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.7
install_requires =
  requests
  websocket_client
  typer

[options.entry_points]
console_scripts =
  ns = neuralspace.cli:app
